	* net/recv.c and net/recvfrom.c: Correct a bug in return value:  The the peer
	  gracefully closes the connections, needs to return zero and not ENOTCONN.
	* arch/arm/src/stm32/stm32_eth.c:  Fix an error in the STM32 ethernet driver.
	  The received buffer size must be two bytes larger to account for the two byte
	  checksum that is appended to the packet.  Otherwise, the last two bytes of
	  real data in the packet will get clobbered.
	* arch/arm/src/stm32f40xx_dma.c:  The STM32 F4 DMA has (finally) been verified
	* arch/arm/src/stm32_sdio.c:  STM32 F4 SDIO DMA is now supported
	* configs/stm3240g-eval/nsh/defconfig: This configuration now supports SDIO
	  with DMA (see configs/stm3240g-eval/README.txt for some issues).
	* net/accept.c, connect.c,and net_monitor.c:  Correct an error in the accept
	  logic.  After a new connection is made via accept(), monitoring for losses
	  of TCP connection must be set up (just as with connect()).  The new file
	  net_monitor.c holds the common TCP connection monitoring logic used by both
	  the accecpt() and connect() logic.  Contributed by Max Nekludov.
	* net/recvfrom.c and net/uip/uip_tcpcallback.c:  Fix a leak in the TCP
	  read-ahead logic.  This is a *critical* bug fix!
	* net/uip/uip_tcpinput.c:  Correct an error in the TCP stack.  It was
	  incrementing the received sequence number BEFORE determining if the
	  incoming data could be handled.  If the data was dropped (usually because
	  there is insufficient buffering space), then no ACK will be sent and the
	  sequence number will be wrong.  The end consequence of the bad sequence
	  number was that the when the dropped packet was re-transmitted, it was
	  was ignored because its sequence number looked wrong.  Fix was, obviously,
	  to only increment the recevied sequence number if the TCP data was
	  accepted.
	* configs/stm3240g-eval, configs/stm32f40discovery, and arch/*/src/Makefile:
	  Add changes to support building with the Atollic "Lite" toolchain.